--- a/PortFolioPage/css/style.css
+++ b/PortFolioPage/css/style.css
@@ -61,8 +61,120 @@ header nav ul li.current a {
 #main_image {
     width: 100%;
     height: 50vh;
-    background-image: url("https://via.placeholder.com/3000x2500");
+    background-image: url("../images/cafe.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+.contents {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+#main_content {
+    width: 65%;
+}
+
+#sidebar {
+    width: 31%;
+}
+
+#home h2 {
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #8c6239;
+    font-size: 1.2em;
+}
+
+#info dl {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+}
+
+#info dt {
+    width: 7em;
+}
+
+
+#info dd {
+    width: calc(100% - 7em);
+}
+
+#info dd,
+#info dt {
+    margin-bottom: 10px;
+}
+
+#campaign ul li {
+    margin-bottom: 10px;
+    list-style-type: none;
+}
+
+#sidebar ul li {
+    margin-bottom: 20px;
+    list-style-type: none;
+}
+
+
+/* footer */
+footer {
+    margin-top: 100px;
+    padding: 30px;
+    text-align: center;
+    color: white;
+    background-color: #a67c52;
+}
+
+footer ul {
+    margin-bottom: 20px;
+    font-size: 0.9em;
+}
+
+footer ul li {
+    display: inline-block;
+    list-style-type: none;
+    margin: 5px;
+}
+
+footer ul li a {
+    color: white;
+}
+
+
+footer ul li a:link {
+    text-decoration: none;
+}
+
+footer ul li a:hover,
+footer ul li a:active {
+    opacity: .7;
+}
+
+small {
+    font-size: 0.7em;
+}
+
+/* responsive */
+
+@media(max-width: 600px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    .header_logo {
+        width: 60px;
+    }
+
+    .contents {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    #main_content,
+    #sidebar {
+        width: 100%;
+    }
 }
